--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1346,7 +1346,7 @@
                     /// Pseudo-background.
                     &::before {
                         content: '';
-                        opacity: 0.6;
+                        opacity: 0.08;
                         position: absolute;
                         top: 0; left: 0; bottom: 0; right: 0;
                         z-index: 0;
@@ -1355,7 +1355,7 @@
                     &:hover, &._3Z2tD {
                         c: 0 0 t;
                         z-index: 0;
-                        &::before { c: 0 0 hl }
+                        &::before { c: 0 0 accent }
                     }
                     /// Right -> Fix bg for checkbox button.
                     &._21W00::before { c: 0 0 t }
