chat: fix bg variable for select messages mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1355,7 +1355,7 @@
                     &:hover, &._3Z2tD {
                         c: 0 0 t;
                         z-index: 0;
-                        &::before { c: 0 0 accent }
+                        &::before { c: 0 0 ac }
                     }
                     /// Right -> Fix bg for checkbox button.
                     &._21W00::before { c: 0 0 t }
