feat: update accent color for the new color-scheme
This goes in line with the color-scheme change proposed in #32.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -119,7 +119,7 @@
             --darker    : #424242;
             --light     : #e6e6e6;
             --lighter   : #bababa;
-            --accent    : #7289da;
+            --accent    : #bf692b;
         } else {
             --dark      : dark;
             --darken    : darken;
