--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      2.1.0
+@version      2.1.1
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -162,8 +162,8 @@
         --ui-font   : ui_font, 'Segoe UI', 'Helvetica Neue', Helvetica,
             'Lucida Grande', Arial, Ubuntu, Cantarell, 'Fira Sans', sans-serif;
 
-        --version   : 'Dark-WhatsApp v2.1.0';
-        --message   : 'Version 2.1 is out! More info in the changelog. 🎉🥳 My blog post about v2: ';
+        --version   : 'Dark-WhatsApp v2.1.1';
+        --message   : 'Version 2.1.1 is out! More info in the changelog. 🎉🥳 My blog post about v2 release: ';
         --changes   : 'https://vednoc.me/blog/the-new-dark-whatsapp';
     }
 
