chat: fix tooltip colors for attach menu dropdown

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -902,7 +902,13 @@
                 border: none i;
                 box-shadow: none i;
                 li { c: 0 0 t }
-                .Ijb1Q::after { box-shadow: bsh }
+                /// Button shadow.
+                .Ijb1Q::after { box-shadow: bsh i }
+                /// Tooltip colors.
+                ._3Fjw5 {
+                    c: fg 0 bd;
+                    box-shadow: bsh;
+                }
             }
             /// Emojis -> Race selection.
             > ul._3z3lc {
