chat: tweak colors for 'download media' buttons

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -398,6 +398,13 @@
             }
         }
 
+        /// Chat -> 'Download media' buttons.
+        ._10YBz {
+            c: fg 0 bd;
+            opacity: 0.75;
+            svg path { v: fg }
+        }
+
         /// Contacts/Search -> Loader.
         svg[width = '18'][height = '18'],
         svg[width = '20'][height = '20'] {
