chat: add rounded corners to gif images

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1814,7 +1814,10 @@
                 /// Header colors.
                 ._2lKjK { c: cm }
                 /// Gif -> Preloader.
-                ._2x9yi { c: 0 0 hl }
+                ._2x9yi {
+                    rad: 4px;
+                    c: 0 0 hl;
+                }
                 /// Stickers -> Retry button.
                 [data-id = 'retry'] { c: ac }
             }
