chat: tweak colors for download sticker buttons

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -398,10 +398,11 @@
             }
         }
 
-        /// Chat -> 'Download media' buttons.
-        ._10YBz {
-            c: fg 0 bd;
+        /// Chat -> Download media/sticker buttons.
+        ._10YBz, ._3UAb1 {
+            c: fg 0 bg;
             opacity: 0.75;
+            box-shadow: bsh;
             svg path { v: fg }
         }
 
