chat: fix context menu bg for embedded links

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1634,7 +1634,7 @@
                     background: linear-gradient(90deg, t, left 80%) i;
                 }
                 /// Embedded links.
-                &._15CAo._3WZEQ { background: none i }
+                &._15CAo._3WZEQ { background: linear-gradient(90deg, t, bg 60%) i }
             }
             /// Replies.
             ._2HTIU {
@@ -1679,7 +1679,7 @@
                     background: linear-gradient(90deg, t, right 80%) i;
                 }
                 /// Embedded links.
-                &._15CAo._3WZEQ { background: none i }
+                &._15CAo._3WZEQ { background: linear-gradient(90deg, t, bg 60%) i }
             }
             /// Replies.
             ._2HTIU {
