--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1969,10 +1969,13 @@
                 ._2UaNq {
                     /// Remove unnecessary icons.
                     ._1ZMSM > span:not(.P6z4j) { display: none i }
-                    /// Reset text position.
-                    .xD91K span[dir] { margin-left: 10px }
-                    /// Reset text position for msg with images/videos/etc.
-                    ._2Bw3Q [class *= 'status-'] { margin-left: 10px }
+                    /// Reset message content area.
+                    ._1Wn_k {
+                        > ._3VIru + span[dir],
+                        > :first-child:not(._3VIru) {
+                            margin-left: 10px;
+                        }
+                    }
                     /// Unread messages.
                     ._1ZMSM .P6z4j {
                         z-index: 999 i;
