left: fix WA version info text color

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -216,7 +216,7 @@
         background-image: none;
         scrollbar-color: ac #55555520;
 
-        /// Text.
+        /// Input/preloader color.
         ::placeholder, ._2kE6F { c: cm }
         a { color: ac }
         strong { c: fg }
@@ -1164,7 +1164,7 @@
             ._13U-5, /._3dwyT { c: cm }
             ._1i7uJ { c: 0 0 bd }
             /// Version info.
-            ._357v7 { c: fg }
+            ._2MoEz { c: fg }
         }
     }
 
