--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1702,6 +1702,11 @@
         /// Input.
         .Am8s6 { c: cm }
         ._3ogpF { c: 0 ac }
+        /// Alert.
+        ._1u0aP {
+            c: fg 0 bd;
+            box-shadow: bsh i;
+        }
         /// Footer.
         > div[tabindex] > div:nth-child(2) {
             border-top: 1px solid bd;
