left: restructure hack for unread msg indicators

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1964,12 +1964,6 @@
                     /// Hide notifications.
                     + span { display: none }
                 }
-                /// HACK: Unread message indicator.
-                ._2UaNq .xD91K {
-                    z-index: 199 i;
-                    display: flex i;
-                    flex-direction: row-reverse i;
-                }
                 /// Items.
                 ._2UaNq {
                     /// Remove unnecessary icons.
@@ -1981,11 +1975,17 @@
                             margin-left: 10px;
                         }
                     }
-                    /// Unread messages.
+                    /// HACK: Unread messages.
                     ._1ZMSM .P6z4j {
                         z-index: 999 i;
                         margin: 7px 0px 0px -60px i;
                         box-shadow: 0 0 0 3px hl i;
+                    }
+                    /// HACK: Unread message indicator.
+                    .xD91K {
+                        z-index: 199 i;
+                        display: flex i;
+                        flex-direction: row-reverse i;
                     }
                     /// NOTE: Fixes weird issue with alignment.
                     ._1ZMSM { margin-right: 0 }
