left: further improves compact mode msg padding
Addresses #112.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1966,13 +1966,16 @@
                 }
                 /// Items.
                 ._2UaNq {
+                    /// Increase padding for message options.
+                    .KgevS { padding-left: 5px i }
                     /// Remove unnecessary icons.
                     ._1ZMSM > span:not(.P6z4j) { display: none i }
                     /// Reset message content area.
                     ._1Wn_k {
                         > ._3VIru + span[dir],
+                        > ._3VIru + div[class],
                         > :first-child:not(._3VIru) {
-                            margin-left: 10px;
+                            margin-left: 15px;
                         }
                     }
                     /// HACK: Unread messages.
