global: fix mess of selectors for left/right panes

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1039,10 +1039,12 @@
         }
     }
 
-    // App -> Left -> Profile/Settings.
-    .app span > div[style *= 'height: 100%'] {
-        > div[class], > span > div[class], > div > div[class] {
+    // App -> Left/right panes.
+    ._2t4Ic {
+        /// Pane background.
+        .copyable-area {
             c: 0 0 hl;
+            /// Header.
             > header {
                 height: unset;
                 min-height: unset i;
