right: fix background for 'search messages' area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1161,6 +1161,8 @@
                     c: 0 0 t;
                 }
             }
+            /// Right -> Search messages.
+            #pane-side { c: 0 0 t }
             /// Blocked contacts.
             ._2TLLH { c: 0 t }
             ._13U-5, /._3dwyT { c: cm }
