refactor: tweak badges and move them to body area

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -329,6 +329,9 @@
             button { c: ac }
         }
 
+        /// App -> Badges.
+        ._2WwbV, .FPZFa { c: ac ac hl }
+
         /// App -> Intro.
         ._1qNwV {
             c: 0 bd bg;
@@ -564,10 +567,6 @@
             box-shadow: none;
         }
     }
-
-    // Global -> Badges.
-    ._2WwbV { c: blue blue hl }
-    .FPZFa { c: ac ac hl }
 
     /// Global -> Modals.
     .overlay {
