global: add bg colors to icons for avatar_r option

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -148,7 +148,7 @@
         --app-width : app_width;
 
         --emoji-o   : emoji_o;
-        
+
         --avatar-r  : avatar_r;
 
         --bg-image  : image_url;
@@ -505,8 +505,9 @@
 
     /// Global -> Profile avatar, Chat avatars, New group icon & no-blocked-contacts icon radius.
     ._3BYwr, ._3RWII, ._3p0T6, ._1i7uJ {
-      border-radius: var(--avatar-r) !important;
-      > img { border-radius: var(--avatar-r) !important }
+        rad: var(--avatar-r) i;
+        c: 0 0 bg;
+        > img { rad: var(--avatar-r) i }
     }
 
     /// Global -> Emojis.
