left: fix the header for starred messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1067,7 +1067,7 @@
         .copyable-area {
             c: 0 0 hl;
             /// Header.
-            > header {
+            header {
                 height: unset;
                 min-height: unset i;
                 border-bottom: 1px solid bd;
