--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1361,8 +1361,9 @@
         /// Chat -> Jump to new messages.
         ._3KRbU {
             c: 0 0 hl;
-            box-shadow: inner;
-            // &:hover { c: 0 0 bd }
+            transition: 0.15s ease;
+            box-shadow: inner, 0 4px 8px sh;
+            &:hover { c: 0 0 bd }
             .P6z4j { c: white 0 ac }
         }
         /// Messages area.
