--- a/wa.user.styl
+++ b/wa.user.styl
@@ -50,7 +50,7 @@
 @var checkbox chat_b_r   'Custom background for right message bubble' 0
 @var color    b_r_bg     'Right message bubble color' #2f343d
 
-@var checkbox emoji_t    'Enable transparent emojis' 1
+@var checkbox emoji_ti    '[BROKEN; DO NOT USE] Enable transparent emojis' 0
 @var range    emoji_o    'Emoji default opacity' [0.8, 0.0, 1, 0.01]
 
 @var select   app_image  'Custom app background' {
@@ -223,8 +223,8 @@
 
         /// Input/preloader color.
         ::placeholder, ._2kE6F { c: cm }
+        strong, [contenteditable] { c: fg }
         a { color: ac }
-        strong { c: fg }
         select {
             c: fg bd;
             /.Fzl83 {
@@ -539,7 +539,7 @@
             box-shadow: none i;
         }
         /// Feat -> Transparent emoji images.
-        if ( emoji_t == 1 ) {
+        if ( emoji_ti == 1 ) {
             repo = 'https://raw.githubusercontent.com/vednoc/wae/master'
             /// Android emojis.
             for i in 0..101 {
@@ -876,7 +876,7 @@
         /// Message status.
         &[data-icon *= '-check'] path { v: cm }
         &[data-icon *= '-dblcheck'] path { v: cm }
-        &[data-icon *= '-dblcheck-ack'] path { v: ac }
+        /._1t84_ &[data-icon *= '-dblcheck'] path { v: ac }
         &[data-icon *= 'check'] path { fill-opacity: 1 i }
         /// Exit/Report.
         &[data-icon = 'exit'],
@@ -1290,7 +1290,7 @@
         [data-active-tab] {
             border-bottom: 1px solid bd;
             c: 0 0 bg;
-            button:not(.Y1iVg) {
+            button {
                 c: cm;
                 &:hover { c: 0 0 hl }
                 &._3caqI { c: fg }
