--- a/wa.user.styl
+++ b/wa.user.styl
@@ -876,6 +876,9 @@
         /// Message status.
         &[data-icon *= '-check'] path { v: cm }
         &[data-icon *= '-dblcheck'] path { v: cm }
+        &[data-icon *= '-dblcheck-ack'] path,
+        &.Ryz_m[data-icon *= '-dblcheck'] path,
+        &._33bww[data-icon *= '-dblcheck'] path,
         /._1t84_ &[data-icon *= '-dblcheck'] path { v: ac }
         &[data-icon *= 'check'] path { fill-opacity: 1 i }
         /// Exit/Report.
