meta: update chat_image URL
Makes it easier to update USo version. It's the same image with a
different hash.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -65,7 +65,7 @@
 @var range    bg_invert  'Background image invert colors' [0, 0.0, 1, 0.1]
 
 @var checkbox chat_bg    'Enable chat background image' 1
-@var text     chat_image 'Custom image for chat' url('/img/bg-chat-tile_8a055527b27b887521a9f084497d8879.png')
+@var text     chat_image 'Custom image for chat' url('https://web.whatsapp.com/img/bg-chat-tile_9e8a2898faedb7db9bf5638405cf81ae.png')
 @var range    chat_bg_o  'Chat background image opacity' [0.1, 0.0, 1, 0.01]
 @var range    chat_bg_i  'Chat background image inverted colors' [0.6, 0.0, 1, 0.1]
 
