chat: fix colors for audio message controls

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1810,6 +1810,10 @@
                 }
             }
         }
+        /// Audio message controls.
+        [data-icon = 'ptt'] path { fill-opacity: 0.55 }
+        [fill = '#09D261'] { v: green }
+        [fill = '#E53935'] { v: red }
         /// Emoji/gif/sticker menu.
         ._30sf0 {
             c: 0 bd;
