icons: fix down arrow animation

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -914,6 +914,8 @@
                 fill: ac;
             }
         }
+        /// Global -> Down arrow animation.
+        &[data-icon = 'down'] { fill-opacity: 0.55 }
     }
 
     // Global -> Context menu.
