--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1407,7 +1407,8 @@
                     div { c: 0 white }
                 }
                 /// Reset icon opacity.
-                /._3f5U8 {
+                /// ???, media and voice message classes
+                /._3f5U8, /._3MU5v, /._2-qoA {
                     path { opacity: 0.55 i }
                     /// Disabled icons.
                     &:disabled path { fill: cm i; opacity: 0.25 i }
