chat: fixed media 'logo-' icons color palette

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -834,13 +834,8 @@
             /// Exclude videos' icons from animating ('logo-youtube', 'logo-facebook' etc.)
             &[data-icon*='logo-'] > svg > path {
                 fill-opacity: 0.6 i;
-
-                &:first-child {
-                    fill: #263238;
-                }
-                &:last-child {
-                    fill: #fff;
-                }
+                &:first-child { fill: bg }
+                &:last-child { fill: fg }
             }
             /// Exclude from animating.
             &[data-icon='muted'],           // muted chat
