chat: add a note to upload preview in compact mode

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1953,6 +1953,10 @@
                 >  div:nth-child(2) > div._2rI9W {
                     flex: 0 0 calc(100% - 80px) i;
                     margin-left: calc(-25% + 80px);
+                    /header ._1pYs5::after {
+                        content: ' | This pane is hard to fix, sorry! -- v';
+                        c: cm;
+                    }
                 }
                 /// Expand contacts.
                 > div:nth-child(3) {
