chat: fix chat background opacity in Ferdi

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1319,7 +1319,7 @@
         c: 0 0 bg;
         /// Chat doodle image.
         /[data-asset-chat-background] {
-            opacity: 1;
+            opacity: 1 i;
             filter: invert(var(--chat-bg-i)) opacity(var(--chat-bg-o));
             background: var(--chat-image);
             /// Feat -> Show chat image.
