right: fix message status color in message info

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -878,6 +878,7 @@
         &[data-icon *= '-dblcheck'] path { v: cm }
         &[data-icon *= '-dblcheck-ack'] path,
         &.Ryz_m[data-icon *= '-dblcheck'] path,
+        &._3rqs1[data-icon *= '-dblcheck'] path,
         &._33bww[data-icon *= '-dblcheck'] path,
         /._1t84_ &[data-icon *= '-dblcheck'] path { v: ac }
         &[data-icon *= 'check'] path { fill-opacity: 1 i }
